# nubi-connector

./: Cargo.toml  Frontend.Prod.Dockerfile  Frontend.Stage.Dockerfile  README.md  REPO_RULES_README.md  docker-compose.yml  package-lock.json  package.json
neardev/: deploy.sh  dev-account  dev-account.env
public/: index.html  manifest.json
queries/: call_tx.sh  deploy.sh
src/: App.js  index.js  lib.rs
src/assets/css/: global.css
src/assets/js/near/: utils.js  (+2 more)
src/assets/sass/: breakpoints.sass  colors.css  colors.sass  fonts.sass  icons.sass  index.sass  toastify.sass
src/components/Accordion/: Accordion.js
src/components/BlockchainsSelector/: BlockchainsSelector.js  BlockchainsSelector.sass
src/components/BtnDownloadReport/: DownloadReport.js
src/components/BtnSwipe/: BtnSwipe.css  BtnSwipe.js  BtnSwipe.sass
src/components/Charts/: ChartTotal.js  ChartWallets.js  helpers.js
src/components/ChartsAndWalletsPanel/: ChartsAndWalletsPanel.js  ChartsAndWalletsPanel.sass
src/components/LoginWallet/: LoginWallet.js  LoginWallet.sass
src/components/Modal/: ModalButton.js  ModalWindow.js
src/components/NavBar/: NavBar.js
src/components/NetworkInformation/: NetworkInformation.js
src/constants/: api-configs.js  chart-configs.js  currencies.js  index.js  mocked-vaults.json  network-configs.js
src/hooks/: helpers.js  useNetwork.js  useUserWallets.js
src/models/: WalletDBModel.js
src/redux/: store.js
src/services/: api.service.js  ethereum.service.js  indexed-db.js  price-api.js  user.service.js
src/utils/: common.js  numbers.js  text.js  ui.js
(+24 files in other folders)
